msa/k8s/k8s-monitoring/monitoring-Ingress.yml
# monitoring-Ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: my-issuer

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - prometheus.wecnedu.com
        - grafana.wecnedu.com-tls
      secretName: grafana.wecnedu.com-tls

  rules:
    - host: prometheus.wecnedu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090

    - host: grafana.wecnedu.com-tls
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
